--- a/listaEspera/pom.xml
+++ b/listaEspera/pom.xml
@@ -51,7 +51,12 @@
 		<dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-validation</artifactId>
-</dependency>   
+</dependency>
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    </dependency>
+
 	</dependencies>
 
 	<build>
