--- a/listaEspera/pom.xml
+++ b/listaEspera/pom.xml
@@ -56,7 +56,11 @@
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson</artifactId>
     </dependency>
-
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.5.0-b01</version>
+</dependency>
 	</dependencies>
 
 	<build>
