--- a/listaEspera/bin/src/main/resources/application.properties
+++ b/listaEspera/bin/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.mvc.view.prefix=/WEB-INF/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/listaespera
-spring.datasource.username=alvaro
-spring.datasource.password=factis
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 logging.level.org.springframework.web=DEBUG
