--- a/listaEspera/pom.xml
+++ b/listaEspera/pom.xml
@@ -61,6 +61,10 @@
     <artifactId>mail</artifactId>
     <version>1.5.0-b01</version>
 </dependency>
+<dependency>
+    <groupId>com.sendgrid</groupId>
+    <artifactId>sendgrid-java</artifactId>
+    </dependency>
 	</dependencies>
 
 	<build>
