--- a/listaEspera/src/main/resources/application.properties
+++ b/listaEspera/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 logging.level.org.springframework.web=DEBUG
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=correo@gmail.com
+spring.mail.password=pass
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
