--- a/listaEspera/pom.xml
+++ b/listaEspera/pom.xml
@@ -69,6 +69,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>8.18.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
