--- a/listaEspera/src/main/resources/application.properties
+++ b/listaEspera/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.org.springframework.web=DEBUG
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=correo@gmail.com
+spring.mail.username=alvaro.llancavil@gmail.com
 spring.mail.password=pass
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
