--- a/listaEspera/bin/pom.xml
+++ b/listaEspera/bin/pom.xml
@@ -65,6 +65,16 @@
     <groupId>com.sendgrid</groupId>
     <artifactId>sendgrid-java</artifactId>
     </dependency>
+    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>8.18.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
